<resources>
    <string name="app_name">GDG Cloud Lahore</string>

    <!-- Title and Description -->
    <string name="create_account">Create Account</string>
    <string name="start_learning_with_create_your_account">Start learning by creating your account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="signin">Sign In</string>
    <string name="default_web_client_id">521135843225-8er0f7q9ovie7q321bpq2h9gg9fiomdg.apps.googleusercontent.com</string>
    <!-- Form Labels -->
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <!-- Hint Texts -->
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_password_hint">Confirm your password</string>
    <string name="username_hint">Enter your username</string>

    <!-- Buttons -->
    <string name="create_account_btn">Create Account</string>
    <string name="check_verification">Check Verification</string>

    <!-- Error Messages -->
    <string name="password_mismatch">Password doesn\'t match</string>
    <string name="fill_all_fields">Please fill all fields</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="registration_failed">Registration failed: %1$s</string>
    <string name="verification_email_sent">Verification email sent!</string>
    <string name="failed_to_send_verification_email">Failed to send verification email.</string>
    <string name="please_verify_email">Please verify your email first.</string>
    <string name="failed_to_refresh_user_data">Failed to refresh user data. Please try again.</string>
    <string name="login_account">Login to your account</string>
    <string name="please_login_with_registered_account">Please login with a registered account</string>
    <string name="forget_password">Forget Password?</string>
    <string name="i_don_t_have_an_account">I don\'t have an account</string>

    <string name="resend">Resend</string>


    <string name="verification">Verification</string>
    <string name="verification_code">Verification Code</string>
    <string name="verification_mail">Verification Mail</string>
    <string name="we_have_to_sent_the_code_verification_to">We have to sent the code verification to</string>
    <string name="magdelana83_mail_com">magdelana83@mail.com</string>
    <string name="sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

